tests/ui/env_option_too_many_options.stderr
error[E0277]: the trait bound `Option<String>: FromStr` is not satisfied
 --> tests/ui/env_option_too_many_options.rs:4:26
  |
4 |     pub optional: Option<Option<String>>
  |                          ^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `Option<String>`
  |
  = help: the following other types implement trait `FromStr`:
            IpAddr
            Ipv4Addr
            Ipv6Addr
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
          and $N others

error[E0277]: the trait bound `Option<String>: FromStr` is not satisfied
 --> tests/ui/env_option_too_many_options.rs:1:38
  |
1 | #[derive(partial_config::HasPartial, partial_config::EnvSourced)]
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `Option<String>`
  |
  = help: the following other types implement trait `FromStr`:
            IpAddr
            Ipv4Addr
            Ipv6Addr
            NonZero<i128>
            NonZero<i16>
            NonZero<i32>
            NonZero<i64>
            NonZero<i8>
          and $N others
  = note: this error originates in the derive macro `partial_config::EnvSourced` (in Nightly builds, run with -Z macro-backtrace for more info)
